# libehstr

./: .gitignore  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.old  NEWS  README  TODO  configure.ac  ehstr.c  ehstr.h  estr.c  estr.h  test-ehstr.c  test-estr.c
misc/: pre-tidy.patch
src/: ehstr.c  ehstr.h
tests/: test-btou.c  test-decimal-to-hex-to-dec-loop.c  test-decimal-to-hex.c  test-ehstr-strnlen.c  test-ehstr.c  test-ehstrnlen.c  test-hex-to-decimal.c  test-nibbles.c  test-revstr.c  test-trimstr.c  test-utob.c
